prevent unnecessary scrollbar by hidden overflow

--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,13 @@ img {
 }
 
 body {
+  overflow: hidden;
   font-family: "Outfit", sans-serif;
   background-color: var(--light-gray);
   display: flex;
   flex-direction: column;
-  align-items: center; /* align vertically */
-  justify-content: center; /* align horizontally */
+  align-items: center; /* align horizontally */
+  justify-content: center; /* align vertically */
   height: calc(100vh - 1px);
   margin: 1.25rem;
 }
@@ -55,8 +56,6 @@ body {
   color: var(--grayish-blue);
   text-align: center;
   margin-bottom: 1.5rem;
-  /*margin-right: 0.625rem;
-  margin-left: 0.625rem; */
 }
 
 .attribution {
